--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     /* background-color: #ffffff45; */
-    background-image:url(/title.jpg);
+    background-image:url(img/title.jpg);
 }
 
 header {
